inou/prp/tests/errors/array_elem_overflow.prp
/*
:name: array_elem_overflow
:type: error
:error: does not fit its declared range
:help: widen the declared type
*/

// 2f-mem_multidim — [4][8]u8 types every element as u8: an element store
// outside the envelope is the same bitwidth-overflow as a scalar one.

mut b:[4][8]u8 = 13
b[1][3] = 300  // locate_error_here
